handler of creating recodings with pending status
